# MLOPS_wafer

./: LICENSE  Makefile  README.md  pyproject.toml
.dvc/: config
docs/: mkdocs.yml
docs/docs/: index.md
mlops_main/: __init__.py  dataset.py  features.py  plots.py
mlops_main/modeling/: predict.py  train.py
